--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "nodemon ./bin/www -e pug,css,json,js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "@okta/oidc-middleware": "^4.0.1",
+    "@okta/okta-sdk-nodejs": "^4.2.0",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
