--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "start": "nodemon ./bin/www -e pug,css,json,js"
   },
   "dependencies": {
-    "@okta/oidc-middleware": "^4.0.1",
-    "@okta/okta-sdk-nodejs": "^4.2.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-openid-connect": "^2.0.0",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.3.3",
+    "pug": "^3.0.0"
   }
 }
